--- a/index.html
+++ b/index.html
@@ -185,7 +185,64 @@
 
       <!--  game link Section -->
       <section class="link-container container">
-        
+     <div class="top-link">
+      <button class="link-btn">
+        <div class="single-link">
+          <img src="images/Rectangle 11.png" alt="">
+          <h2>Action Games</h2>
+        </div>
+       </button>
+       <button class="link-btn">
+        <div class="single-link">
+          <img src="images/Rectangle 12.png" alt="">
+          <h2>Adventure Games</h2>
+        </div>
+       </button>
+       <button class="link-btn">
+        <div class="single-link">
+          <img src="images/Rectangle 13.png" alt="">
+          <h2>ArcadeGames</h2>
+        </div>
+       </button>
+       <button class="link-btn">
+        <div class="single-link">
+          <img src="images/Rectangle 14.png" alt="">
+          <h2>Educational Games</h2>
+        </div>
+       </button>
+       <button class="link-btn">
+        <div class="single-link">
+          <img src="images/Rectangle 15.png" alt="">
+          <h2>Word Games</h2>
+        </div>
+       </button>
+       <button class="link-btn">
+        <div class="single-link">
+          <img src="images/Rectangle 16.png" alt="">
+          <h2>Role Playing Games</h2>
+        </div>
+       </button>
+       <button class="link-btn">
+        <div class="single-link">
+          <img src="images/Rectangle 17.png" alt="">
+          <h2>Music & Audio Games</h2>
+        </div>
+       </button>
+       <button class="link-btn">
+        <div class="single-link">
+          <img src="images/Rectangle 18.png" alt="">
+          <h2>Puzzle Games</h2>
+        </div>
+       </button>
+       <button class="link-btn">
+        <div class="single-link">
+          <img src="images/Rectangle 19.png" alt="">
+          <h2>stragegy Games</h2>
+        </div>
+       </button>
+     </div>
+       
+
       </section>
     </main>
 
