--- a/index.html
+++ b/index.html
@@ -245,7 +245,43 @@
 
       </section>
     </main>
+<!-- Footer Section -->
 
-    <footer></footer>
+    <footer class="footer-container container">
+      <div class="logo-container">
+        <div class="footer-logo">
+          <img class="logo-img" src="./images/Frame.png" alt="" />
+          <p class="loto-text"><span>G</span>amer</p>
+        </div>
+      </div>
+
+      <div class="importent-links">
+        <h3>Our Story</h3>
+        <h3>Games</h3>
+        <h3>Web Games</h3>
+        <h3>Careers</h3>
+        <h3> Support</h3>
+        <h3>My Acount</h3>
+      </div>
+
+      <div class="socil-icons">
+        
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-twitter"></i> </a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+      </div>
+
+      <div class="official-links">
+        <h5>Trems and Conditons</h5>
+        <h5>Privacy Policy</h5>
+        <h5>Cookie Policy</h5>
+        <h5>Privacy Policy</h5>
+      </div>
+
+
+      <div class="copyright-section">
+        <h4>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</h4>
+      </div>
+    </footer>
   </body>
 </html>
