trying to responsive

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     </main>
 <!-- Footer Section -->
 
-    <footer class="footer-container container">
+    <footer class="footer-container">
       <div class="logo-container">
         <div class="footer-logo">
           <img class="logo-img" src="./images/Frame.png" alt="" />
